doc: fix collapse button

--- a/.storybook/assets/css/wordpress/admin-menu.css
+++ b/.storybook/assets/css/wordpress/admin-menu.css
@@ -591,7 +591,7 @@ ul#adminmenu > li.current > a.current:after {
 }
 
 #collapse-button .collapse-button-label {
-	padding: 0 0 0 36px;
+	padding: 2px 0 0 36px;
 }
 
 .folded #collapse-button .collapse-button-label {
